# docs/swagger.yaml
@@ -1,4 +1,9 @@
 definitions:
+  controllers.StatusRequest:
+    properties:
+      status:
+        type: string
+    type: object
   controllers.TaskRequest:
     properties:
       description:
@@ -10,9 +15,9 @@ definitions:
     type: object
   models.Status:
     enum:
-    - todo
-    - doing
-    - done
+    - TODO
+    - DOING
+    - DONE
     type: string
     x-enum-varnames:
     - TODO
@@ -128,6 +133,34 @@ paths:
           schema:
             $ref: '#/definitions/models.Task'
       summary: Update Task by ID
+      tags:
+      - Task
+  /tasks/status/{id}:
+    patch:
+      consumes:
+      - application/json
+      description: Change status of a task by ID
+      parameters:
+      - description: Task ID
+        format: uint64
+        in: path
+        name: id
+        required: true
+        type: integer
+      - description: Status object to be created
+        in: body
+        name: task
+        required: true
+        schema:
+          $ref: '#/definitions/controllers.StatusRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.Task'
+      summary: Change Task Status
       tags:
       - Task
 swagger: "2.0"
